<resources>
    <string name="app_name">Life Log</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="edit">Edit</string>]
    <string name="add">Add</string>]
    <string name="ok">OK</string>]
    <string name="cancel">Cancel</string>

    <string name="event_name">Event Name</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="add_event">Add an event</string>

    <string name="time_format_error">Incorrect time format</string>
    <string name="null_time">Null time</string>
    <string name="event_name_empty">Event name cannot be empty</string>
    <string name="event_type_empty">Event type cannot be empty</string>

    <string name="already_ongoing">You have already had an event on-going.</string>
    <string name="get_event_from_preference_failed">Getting event from SharedPreference failed.</string>
    <string name="an_ongoing_event">An event on-going</string>
    <string name="you_have_an_ongoing">You have an on-going event. Detail as follows:</string>
    <string name="time_empty">Time field cannot be empty</string>
    <string name="ago">ago</string>
    <string name="at">at</string>
    <string name="delete_event">Delete event "%1$s"?</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>

    <string-array name="time_scale_array">
        <item>mins</item>
        <item>hours</item>
    </string-array>

    <string-array name="event_type_array">
        <item>Entertainment</item>
        <item>Work</item>
        <item>Study</item>
        <item>Casual</item>
        <item>Other</item>
    </string-array>

    <string name="unknown">Unknown</string>

    <string name="start_from_now">Start a timer now</string>
    <string name="enter_precise_time">Enter precise time</string>
    <string name="mins">mins</string>
    <string name="hours">hours</string>
    <string name="end_time_earlier_than_start_time">End time cannot be earlier than start time</string>
    <string name="edit_an_event">Editing an event</string>
    <string name="secondary_event_name">Secondary Name (Optional)</string>
    <string name="if_it_is_done">Enter the time below if it was done.</string>
    <string name="event_detail">
        Name:         %1$s\n
        SecName:      %2$s\n
        Start Time:   %3$s\n
        Type:         %4$s
    </string>
    <string name="event_sec_name">: %1$s</string>

    <string name="about_abstract"><![CDATA[
        The principle of this app is inspired by the concept of <b>The Quantified Self</b> in <b><i>Willpower: Rediscovering the Greatest Human Strength</i></b>.
        The goal of this app is to monitor behaviours.
        ]]>
    </string>

    <string name="about_quote"><![CDATA[
       > <i>“In this I have entered, day by day, the number of pages I have written, so that if at any time I have slipped
            into idleness for a day or two, the record of that idleness has been there, staring me in the face, and
            demanding of me increased labour, so that the deficiency might be supplied,” he(Anthony Trollope) explained. “There has been
            the record before me, and a week passed with an insufficient number of pages has been a blister to my eye,
            and a month so disgraced would have been a sorrow to my heart.” …</i>
       <br/>
         <i>  … “I have been told that such appliances are beneath the notice of a man of genius,” he(Anthony Trollope) wrote. “I have never
            fancied myself to be a man of genius, but had I been so I think I might well have subjected myself to these
            trammels. Nothing surely is so potent as a law that may not be disobeyed. It has the force of the water drop
            that hollows the stone. A small daily task, if it be really daily, will beat the labours of a spasmodic Hercules.”</i>
       <br/><br/>
       > <i> … (Esther Dyson) says, “I walk up more stairs and take fewer
            escalators because I know I get more points for the extra steps. If I’m at a party in the evening, I’ll tell myself
            that if I leave now, I could go to bed at nine-thirty instead of ten-thirty, and I’d get more sleep, and my sleep
            number would look better in the morning. In many ways, it frees me to do the right thing because I can
            blame my behavior on the numbers.” </i>
       <br/><br/>
       > <i>… Keeping track is the first step, but it’s not necessarily enough.  Thomas Jefferson … (noted) every penny he earned and spent …
         Yet he didn’t put the details in perspective until it was too late. When he eventually stepped back to balance his assets and liabilities,
         he was shocked to discover that he was disastrously in debt. Recording the data had given him a false sense of being in control
         of his finances, but it wasn’t enough. He needed the sort of analysis offered by computers …</i>
    ]]></string>

    <string name="build_info" translatable="false">v%1$s, Nutr1t07 2020</string>
    <string name="action_stat">Stats</string>
    <string name="login_or_register">Login/Register</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="user_exists">Registered</string>
    <string name="user_not_exists">Unregistered</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="sync_options">Sync Options</string>
    <string name="info">Info</string>
    <string name="user_info_text">Username: %1$s\nLast sync time: %2$s</string>
    <string name="logout">Logout</string>
    <string name="something_went_wrong">Something went wrong…</string>
    <string name="checking_availability">Checking availability…</string>
    <string name="wait_for_availability_check">Please wait util username availability is finished.</string>
    <string name="username_or_passwd_empty">Either username or password cannot be empty</string>
    <string name="login_success">Login successfully</string>
    <string name="register_success">Register successfully</string>
    <string name="incorrect_passwd">Incorrect password</string>
    <string name="never">Never</string>
    <string name="account">Account</string>
    <string name="sync_now">Sync now</string>
    <string name="sync_event_on_startup">Sync events on application startup</string>
    <string name="user_session_not_exist">User session not exist</string>
    <string name="download_events_failed">Fetching events failed: %1$s</string>
    <string name="sync_success">Sync successfully</string>
    <string name="sync_start">Start syncing…</string>
    <string name="proceed_to_register">You are about to register a new account. Proceed?</string>
</resources>