<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <EditText
        android:id="@+id/new_event_name_editText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autofillHints="event name"
        android:hint="@string/event_name"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:textSize="14sp" />


    <EditText
        android:id="@+id/new_event_sec_name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="event second name"
        android:ems="10"
        android:hint="@string/secondary_event_name"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <view
        android:id="@+id/new_event_types_group"
        class="com.nutr1t07.lifelog.view.MultiLineRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/start_from_now_radioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/start_from_now" />

        <RadioButton
            android:id="@+id/precise_time_radioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_precise_time" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/new_event_start_time_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/new_event_start_time_editText"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/start_time"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/new_event_start_time_btn"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/new_event_start_time_btn"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:enabled="false"
                android:orientation="vertical"
                android:text="@string/edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/new_event_end_time_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_time"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/new_event_end_time_editText"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/start_time"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/new_event_end_time_btn"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/new_event_end_time_btn"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:enabled="false"
                android:text="@string/edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>