<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_have_an_ongoing"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/ongoing_event_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/event_detail"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/if_it_is_done" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/ongoing_time_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="0dp">

            <RadioButton
                android:id="@+id/ongoing_relative_time_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:checked="true" />

            <RadioButton
                android:id="@+id/ongoing_precise_time_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_alignTop="@+id/ongoing_time_radioGroup"
            android:layout_toEndOf="@+id/ongoing_time_radioGroup"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ongoing_relative_time_editText"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint=""
                android:inputType="text" />

            <Spinner
                android:id="@+id/ongoing_relative_time_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:entries="@array/time_scale_array" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/ago" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_alignBottom="@+id/ongoing_time_radioGroup"
            android:layout_toEndOf="@+id/ongoing_time_radioGroup"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"

                android:text="@string/at" />

            <EditText
                android:id="@+id/ongoing_precise_time_editText"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:enabled="false"
                android:hint="12:00"
                android:inputType="text" />

            <Button
                android:id="@+id/ongoing_event_precise_time_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/edit" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>