<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <EditText
        android:id="@+id/edit_event_name_editText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/event_name"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_event_name_sec_editText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/secondary_event_name"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:textSize="14sp" />

    <view
        android:id="@+id/edit_event_types_group"
        class="com.nutr1t07.lifelog.view.MultiLineRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/edit_event_start_time_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_event_start_time_editText"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/start_time"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/edit_event_end_time_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_time"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_event_end_time_editText"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/end_time"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <Button
        android:id="@+id/edit_event_delete_event_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete" />


</LinearLayout>